Resolved #17 increase contrast between text and parallax image

--- a/menu.css
+++ b/menu.css
@@ -57,6 +57,7 @@ li>a>img {
 .parallax-container {
   text-align: center;
   height: 300px;
+  background-color: rgba(0,0,0,0.2);
 }
 footer {
   padding: 20px;
